<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rafalesoft.org.coachacook.CoachACook">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reset"
        android:title="@string/action_reset"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_update_stock"
        android:title="@string/action_update_stock"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        app:showAsAction="never" />
</menu>
