<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/stock_view_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/stock_item_name"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/ingredient_id" />

    <TextView
        android:id="@+id/stock_item_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredient_amount" />

    <TextView
        android:id="@+id/stock_item_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/ingredient_unit" />
</TableRow>